Fixed three-digit overflow in shop quantities (even though it's technically a bug)

--- a/styles/shop.css
+++ b/styles/shop.css
@@ -531,7 +531,7 @@
     margin-left: 10px;
 }
 #shop #console .event .item_quantity {
-    width: 30px;
+    width: 32px;
     text-align: right;
 }
 #shop #console .event .item_owned {
